# dependagot

./: README.md  build.gradle  gradle.properties  settings.gradle
api/: build.gradle
api/dependabot/v1/: dependabot.proto
go/: .dockerignore  build.gradle
go/cli/: Dockerfile  build.gradle  go.mod  go.sum  main.go  main2.go
go/cli/cmd/: container.go  list.go  root.go  update.go  upgrade.go
go/cli/diff/: diff.go
go/cli/loaders/: file.go  memory.go
go/cli/modules/: container.go  factory.go  factory_test.go  module.go  updates.go
go/cli/runner/: runner.go
go/common/: build.gradle  go.mod  go.sum
go/modules/: Dockerfile  build.gradle  go.mod  go.sum  main.go
go/modules/modules/: modules.go  modules_test.go
go/protoc/: Dockerfile  build.gradle  go.mod  go.sum  protoc.go  protoc.sh
go/runner/: go.mod  go.sum  main.go
proto/: build.gradle
ruby/: Dockerfile  build.gradle
ruby/bundler/: .gitignore  Dockerfile  Dockerfile.dev  Gemfile  build.gradle  dependabot-ruby-bundler.gemspec  dependagot-ruby-bundler.gemspec  run.rb
ruby/common/: build.gradle  dependabot-ruby-common.gemspec  dependagot-ruby-common.gemspec
ruby/protoc/: Dockerfile  Gemfile  build.gradle  go.mod  go.sum  protoc.go  protoc.sh
rust/cargo/: Cargo.toml  Dockerfile  build.gradle
rust/cargo/src/: main.rs  modules.rs  routes.rs  service.rs  state.rs
rust/cargo/src/handlers/:    files.rs  list_dependencies.rs  mod.rs  sandbox.rs  update_dependencies.rs
rust/common/: Cargo.toml  build.rs
tools/protoc/: Dockerfile  build.gradle  go.mod  protoc.go  protoc.sh
(+31 files in other folders)
