[package]
name = "dependagot-rust-cargo"
version = "0.1.0"
edition = "2018"

[dependencies]
dependagot-common = { path = "../common/" }
log = "0.4.8"
env_logger = "0.7.1"
prost = "0.6.1"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
warp-protobuf = "0.1.0"
tempdir = "0.3.7"
cargo = "0.43.1"
anyhow = "1.0.28"
toml = { version = "0.5.3", features = ["preserve_order"] }